--- a/Clarity Theme/Mod - Dark Mode.css
+++ b/Clarity Theme/Mod - Dark Mode.css
@@ -1,7 +1,7 @@
 /**
  * "Clarity" by Valerio Lyndon
  * Dark Mode Modification
- * Revision 1.2 + MAL Shutdown Fixes 5
+ * Revision 2.0 + MAL Shutdown Fixes 5
  */
  
 /**
@@ -370,21 +370,20 @@ a, a:hover { color: #416abe; }
   !OVERLAYS @Base
 \*==============================*/
 
-#fancybox-overlay {
-	opacity: 0.35 !important;
-}
+#fancybox-overlay { opacity: 0.35 !important; }
 
 
 /* - - - - - - - - - - - - - - -*\
   iframes
 \*- - - - - - - - - - - - - - - */
 
-#fancybox-outer #fancybox-close {
-	border-color: #212121;
-}
+#fancybox-outer #fancybox-close { border-color: #212121; }
 
-#fancybox-outer, #advanced-options {
-	box-shadow: 0 0 32px rgba(0,0,0,0.75);
+#fancybox-outer, #advanced-options { box-shadow: 0 0 32px rgba(0,0,0,0.75); }
+
+#fancybox-frame {
+	-webkit-filter: invert(87.8%) hue-rotate(197deg);
+	filter: invert(87.8%) hue-rotate(197deg);
 }
 
 
