Finally removed MAL Shutdown Fixes.

--- a/9anime Theme/Theme.css
+++ b/9anime Theme/Theme.css
@@ -1,4 +1,4 @@
-/* "9anime Adaption" by Valerio Lyndon / Revision 0.5 + MAL Shutdown Fixes 6 */
+/* "9anime Adaption" by Valerio Lyndon / Revision 0.5 */
 
 @\import "https://fonts.googleapis.com/css?family=Roboto:400,500,700";
 @\import "https://malscraper.azurewebsites.net/covers/auto/presets/dataimagelink";
@@ -1494,96 +1494,3 @@ footer {
 		margin-left: 0 !important;
 	}
 }
-
-
-
-
-
-/*==============================*\
-  !MAL-SHUTDOWN-FIXES
-\*==============================*/
-
-body .initialize-tutorial {
-	position: fixed;
-	top: 0;
-	left: 0;
-	
-	display: block;
-	width: 40px;
-	height: 40px;
-	padding: 0;
-	background: none !important;
-	border: none !important;
-	
-	z-index: 9999;
-	pointer-events: none;
-}
-body .initialize-tutorial:hover {
-	pointer-events: auto;
-}
-
-.initialize-tutorial:before {
-	content: "";
-	position: absolute;
-	top: -40px;
-	left: -45px;
-	
-	display: block;
-	width: 90px;
-	height: 74px;
-	background: #0b0a0d;
-	border-bottom: 2px solid #723f8c;
-	
-	pointer-events: auto;
-	transform: rotate(-45deg);
-	z-index: -1;
-}
-
-.initialize-tutorial:after {
-	content: "\f129";
-	position: absolute;
-	top: 0;
-	left: 0;
-	
-	width: 30px;
-	height: 30px;
-	
-	color: #b4b4b4;
-	font: 20px/30px FontAwesome;
-	
-	transition: all 0.3s ease;
-	z-index: 1;
-}
-
-.initialize-tutorial:hover:after { top: 10px; }
-
-.initialize-tutorial .initialize-tutorial__message {
-	position: relative;
-	left: -450px;
-	
-	width: 450px;
-	height: 30px;
-	padding: 10px 10px 10px 30px;
-	background: #0b0a0d;
-	border-bottom: 2px solid #723f8c;
-	border-right: 2px solid #723f8c;
-	
-	color: #b4b4b4;
-	line-height: 15px;
-	text-align: left;
-	
-	opacity: 0;
-	transition: all 0.3s ease;
-	z-index: 1;
-}
-
-.initialize-tutorial:hover .initialize-tutorial__message {
-	left: 0;
-	
-	opacity: 1;
-}
-
-.initialize-tutorial .initialize-tutorial__message a { color: #80479e !important; }
-.initialize-tutorial .initialize-tutorial__message a:hover { text-decoration: underline !important; }
-
-.initialize-tutorial .initialize-tutorial__message .fa { display: none; }
