--- a/9anime Theme/Theme.css
+++ b/9anime Theme/Theme.css
@@ -34,6 +34,9 @@ a {
 	outline: 0 !important;
 }
 
+/* Remove Tutorial/Notices */
+.initialize-tutorial { display: none !important; }
+
 .list-container {
 	position: static;
 	
